--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "9.2.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "styled-jsx": "latest"
   }
 }
