--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,12 @@
   ],
   "plugins": [
     [
+      "styled-components",
+      {
+        "ssr": true
+      }
+    ],
+    [
       "module-resolver",
       {
         "root": [
